--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.41.2"
+  },
+  "devDependencies": {
+    "jasmine": "^3.3.1",
+    "request": "^2.88.0"
   }
 }
