--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/lorenz21/one-cart#readme",
   "dependencies": {
     "concurrently": "^4.1.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
