--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.16.4",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.41.2"
+    "sequelize": "^4.41.2",
+    "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
     "jasmine": "^3.3.1",
