--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "concurrently": "^4.1.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "pg": "^7.7.1",
+    "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.41.2",
-    "sequelize-cli": "^5.4.0"
+    "sequelize": "^4.32.6"
   },
   "devDependencies": {
     "jasmine": "^3.3.1",
