--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.16.4",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.32.6"
+    "sequelize": "^4.32.6",
+    "sequelize-cli": "^4.0.0"
   },
   "devDependencies": {
     "jasmine": "^3.3.1",
