--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   },
   "homepage": "https://github.com/lorenz21/one-cart#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.32.6",
