--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.32.6",
-    "sequelize-cli": "^4.0.0"
+    "sequelize-cli": "^4.0.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "jasmine": "^3.3.1",
