--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://localhost:5000",
   "browserslist": [
     ">0.2%",
     "not dead",
