--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage" : "https://lorenz21-one-cart.herokuapp.com/",
   "eslintConfig": {
     "extends": "react-app"
   },
